--- a/students/signup.html
+++ b/students/signup.html
@@ -75,7 +75,7 @@
         <br>
         <input type="submit" id="submit-button" hidden>
         <label class="signup" for="submit-button">Sign Up</label>
-        <a href="https://github.com/Aritra-1261/Facial-Recognison-Login-system/blob/main/main.html">Old user</a>
+        <a href="/Facial-Recognison-Login-system/blob/main/main.html">Old user</a>
     </form>
     </div>
 </span>
