--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <style>
     label {
         display: block;
@@ -75,7 +75,7 @@
         <br>
         <input type="submit" id="submit-button" hidden>
         <label class="signup" for="submit-button">Sign Up</label>
-        <a href="http://localhost/face-recognition-login-system-master/login.html">Old user</a>
+        <a href="/index.html">Old user</a>
     </form>
     </div>
 </span>
