--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Login
     <input type="text" accept="image/png" hidden name="current_image" id="current_image">
        <button  onclick="login()" class="btn-dark" value="login">Login </button>
        <br>
-       <a href="/students/signup.html">New user</a>
+       <a href="/main/students/signup.html">New user</a>
        <br>
     </form>
     </div>
