--- a/students/signup.html
+++ b/students/signup.html
@@ -67,7 +67,7 @@
             </p>
     <span class="center">
     <div class="container text-center bordered" style="width:280px">
-    <form action="signup.py" method="post" enctype="multipart/form-data">
+    <form action="https://github.com/Aritra-1261/Facial-Recognison-Login-system/blob/main/students/signup.py" method="post" enctype="multipart/form-data">
         <input type="email" placeholder="Enter email for Registration...." name="email" class="form-control form-control-sm text-left" required>
         <br>
         <input type="file" id="upload-button" name="filename"accept="image/*" required hidden>
